--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4736,10 +4736,10 @@
         <div class="highlight-box mt-4">
             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
             <p style="text-align: justify;" class="text-sm">Bu madde, Türkiye'deki idari yapının "iskeletini" çizer ve üç temel ilke ortaya koyar:</p>
-            <ul class="list-disc pl-5 space-y-1 text-sm">
+            <ul class="list-disc pl-5 space-y-2 text-sm">
                 <li><strong>İdarenin Bütünlüğü:</strong> İdare, merkez (Bakanlıklar) ve yerinden yönetim (Belediyeler, Üniversiteler, TRT) birimlerinden oluşsa da, bir bütün halinde çalışır. Bu bütünlük, merkezdeki idarenin yerel idareler üzerinde sahip olduğu "idari vesayet" yetkisiyle sağlanır.</li>
                 <li><strong>Merkezden ve Yerinden Yönetim:</strong> İdarenin görevleri, hem başkentteki merkezi birimler hem de belirli özerkliğe sahip yerel birimler tarafından yürütülür.</li>
-                <li><strong>Kamu Tüzelkişiliği Kurulması:</strong> Bu, sınavlar için en güncel ve en önemli bilgidir. Bir kamu tüzelkişiliği (Belediye, Üniversite, SGK, TRT gibi) iki şekilde kurulabilir: Kanunla VEYA Cumhurbaşkanlığı Kararnamesiyle.</li>
+                <li><strong>Kamu Tüzelkişiliği Kurulması:</strong> Bu, sınavlar için en güncel ve en önemli bilgidir. Bir kamu tüzelkişiliği (Belediye, Üniversite, SGK, TRT gibi) iki şekilde kurulabilir: <strong>Kanunla VEYA Cumhurbaşkanlığı Kararnamesiyle.</strong></li>
             </ul>
         </div>
         <div class="strategy-box mt-4">
@@ -4767,7 +4767,7 @@
             <ul class="list-disc pl-5 space-y-1 text-sm">
                 <li><strong>Kimler Çıkarabilir?:</strong> Cumhurbaşkanı, Bakanlıklar, Kamu tüzelkişileri (Belediyeler, Üniversiteler vb.).</li>
                 <li><strong>Şartı Nedir?:</strong> Kendi görev alanlarıyla ilgili kanunlara ve Cumhurbaşkanlığı kararnamelerine aykırı olamazlar.</li>
-                <li><strong>Amacı Nedir?:</strong> Üst normların (kanun ve CBK'ların) uygulanmasını sağlamak ve detaylandırmak.</li>
+                <li><strong>Amacı Nedir?:</strong> Üst normların (kanun ve CBK'ların) uygulanmasını sağlamak.</li>
             </ul>
         </div>
     </div>
@@ -4802,19 +4802,19 @@
         </blockquote>
         <div class="highlight-box mt-4">
             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
-            <p style="text-align: justify;" class="text-sm">Bu madde, "hukuk devleti" ilkesinin en temel güvencesidir. İdarenin keyfi davranmasını engelleyen "yargı denetimi" kalkanını düzenler. Altın kural şudur: İdarenin her türlü eylem ve işlemlerine karşı yargı yolu açıktır. Bu ana kural, hiçbir idari işlemin kural olarak yargı denetiminin dışında bırakılamayacağını ifade eder.</p>
+            <p style="text-align: justify;" class="text-sm">Bu madde, "hukuk devleti" ilkesinin en temel güvencesidir. İdarenin keyfi davranmasını engelleyen "yargı denetimi" kalkanını düzenler. <strong>Altın Kural:</strong> İdarenin her türlü eylem ve işlemlerine karşı yargı yolu açıktır. Bu, ana kuraldır. Hiçbir idari işlem, kural olarak yargı denetiminin dışında bırakılamaz.</p>
         </div>
         <div class="strategy-box mt-4">
             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Altın Kuralın İstisnaları</h6>
             <p style="text-align: justify;" class="text-sm mb-3">Anayasa, bu genel kurala bazı istisnalar getirmiştir. Sınavlarda en çok bu istisnalar sorulur:</p>
             <ul class="list-disc pl-5 text-sm space-y-1">
-                <li><strong>Yüksek Askerî Şûra (YAŞ) Kararları:</strong> YAŞ'ın aldığı kararlardan sadece <strong>terfi işlemleri</strong> ve <strong>kadrosuzluk nedeniyle emekliye ayırma</strong> işlemleri yargı denetimi DIŞINDADIR. Bunun dışındaki her türlü ilişik kesme (ihraç vb.) kararlarına karşı yargı yolu AÇIKTIR.</li>
+                <li><strong>Yüksek Askerî Şûra (YAŞ) Kararları:</strong> YAŞ'ın aldığı kararlardan sadece; <strong>terfi işlemleri</strong> ve <strong>kadrosuzluk nedeniyle emekliye ayırma</strong> işlemleri yargı denetimi DIŞINDADIR. Bunun dışındaki her türlü ilişik kesme (ihraç vb.) kararlarına karşı yargı yolu AÇIKTIR.</li>
                 <li><strong>Milletlerarası Tahkim:</strong> Yabancılık unsuru taşıyan imtiyaz sözleşmelerinden doğan uyuşmazlıkların milletlerarası tahkimde çözülmesi öngörülebilir.</li>
             </ul>
         </div>
         <div class="highlight-box mt-4">
             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: "Yerindelik Denetimi Yasağı"</h6>
-            <p style="text-align: justify;" class="text-sm">Bu, idari yargının en temel ilkesidir. Mahkeme, idarenin bir işlemini denetlerken sadece "Bu işlem hukuka (kanuna, anayasaya) uygun mu, değil mi?" diye sorabilir. Mahkeme asla "Bu işlem hukuka uygun ama daha iyi, daha yerinde, daha mantıklı yapılabilir miydi?" diye soramaz. Yani yargı, idarenin yerine geçerek onun takdir yetkisini kullanacağı şekilde karar veremez. Sadece "hukukilik" denetimi yapar, "yerindelik" denetimi yapamaz.</p>
+            <p style="text-align: justify;" class="text-sm">Bu, idari yargının en temel ilkesidir. Mahkeme, idarenin bir işlemini denetlerken sadece şunları sorabilir: "Bu işlem hukuka (kanuna, anayasaya) uygun mu, değil mi?" Mahkeme asla şunu soramaz: "Bu işlem hukuka uygun ama daha iyi, daha yerinde, daha mantıklı yapılabilir miydi?" Yani yargı, idarenin yerine geçerek onun takdir yetkisini kullanacağı şekilde karar veremez. Sadece "hukukilik" denetimi yapar, "yerindelik" denetimi yapamaz.</p>
         </div>
         <div class="warning-box mt-4">
             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Diğer Önemli Kurallar:</h6>
@@ -4825,7 +4825,7 @@
                         <li>İşlemin açıkça hukuka aykırı olması.</li>
                     </ol>
                 </li>
-                <li><strong>İdarenin Sorumluluğu:</strong> İdare, kendi eylem ve işlemlerinden doğan zararı ödemekle yükümlüdür (hizmet kusuru).</li>
+                <li><strong>İdarenin Sorumluluğu:</strong> İdare, kendi eylem ve işlemlerinden doğan zararı ödemekle yükümlüdür.</li>
             </ul>
         </div>
     </div>
