--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4830,7 +4830,139 @@
         </div>
     </div>
 </details>
+<!-- Madde 126 -->
+<details id="madde-126" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 126 – Merkezi İdare
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Türkiye, merkezi idare kuruluşu bakımından, coğrafya durumuna, ekonomik şartlara ve kamu hizmetlerinin gereklerine göre, <strong>illere</strong>; iller de diğer kademeli bölümlere ayrılır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            İllerin idaresi <strong>yetki genişliği esasına dayanır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kamu hizmetlerinin görülmesinde verim ve uyum sağlamak amacıyla, birden çok ili içine alan merkezi idare teşkilatı kurulabilir. Bu teşkilatın görev ve yetkileri <strong>kanunla düzenlenir.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm">Bu madde, devletin başkent dışındaki örgütlenmesini, yani "taşra teşkilatını" düzenler. Türkiye'nin illere, illerin de ilçeler gibi diğer kademeli bölümlere ayrılmasının anayasal dayanağı budur.</p>
+        </div>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: "Yetki Genişliği" İlkesi Nedir?</h6>
+            <p style="text-align: justify;" class="text-sm mb-3">Bu, maddenin ve sınavların en kritik kavramıdır.</p>
+            <ul class="list-disc pl-5 text-sm space-y-2">
+                <li><strong>Normalde:</strong> Merkezi idarenin bir parçası olan bir ildeki müdür (örn: İl Sağlık Müdürü), Ankara'daki Bakanlığa sormadan, Bakanlığa ait bir yetkiyi kullanamaz. Buna <strong>hiyerarşi</strong> denir.</li>
+                <li><strong>İstisna (Yetki Genişliği):</strong> Sadece <strong>İLLERDE</strong> ve sadece <strong>VALİYE</strong> tanınmış bir istisnadır. Vali, ilin genel idaresi için gerekli gördüğü acil durumlarda, merkeze (Ankara'ya) danışmadan, merkeze ait bir yetkiyi kullanabilir ve bir karar alabilir.</li>
+                <li><strong>Amacı:</strong> Merkezin taşradaki işleyişini hızlandırmak ve daha verimli hale getirmektir. Vali, bu yetkiyi kullanırken merkez adına hareket eder ve merkezin bir parçasıdır. Yetki Genişliği, hiyerarşiyi ortadan kaldırmaz, sadece esnetir.</li>
+            </ul>
+        </div>
+    </div>
+</details>
 
+<!-- Madde 127 -->
+<details id="madde-127" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 127 – Mahalli İdareler
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Mahalli idareler; il, belediye veya köy halkının mahalli müşterek ihtiyaçlarını karşılamak üzere kuruluş esasları kanunla belirtilen ve karar organları, gene kanunda gösterilen, <strong>seçmenler tarafından seçilerek oluşturulan kamu tüzelkişileridir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Mahalli idarelerin kuruluş ve görevleri ile yetkileri, yerinden yönetim ilkesine uygun olarak kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Mahalli idarelerin seçimleri, 67 nci maddedeki esaslara göre <strong>beş yılda bir yapılır.</strong> Kanun, büyük yerleşim merkezleri için özel yönetim biçimleri getirebilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Mahalli idarelerin seçilmiş organlarının, organlık sıfatını kazanmalarına ilişkin itirazların çözümü ve kaybetmeleri, konusundaki denetim yargı yolu ile olur. Ancak, görevleri ile ilgili bir suç sebebi ile hakkında soruşturma veya kovuşturma açılan mahalli idare organları veya bu organların üyelerini, <strong>İçişleri Bakanı, geçici bir tedbir olarak, kesin hükme kadar uzaklaştırabilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Merkezi idare, mahalli idareler üzerinde, mahalli hizmetlerin idarenin bütünlüğü ilkesine uygun şekilde yürütülmesi, kamu görevlerinde birliğin sağlanması, toplum yararının korunması ve mahalli ihtiyaçların gereği gibi karşılanması amacıyla, kanunda belirtilen esas ve usuller dairesinde <strong>idari vesayet yetkisine sahiptir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Mahalli idarelerin belirli kamu hizmetlerinin görülmesi amacı ile, kendi aralarında <strong>Cumhurbaşkanının izni ile birlik kurmaları</strong>, görevleri, yetkileri, maliye ve kolluk işleri ve merkezi idare ile karşılıklı bağ ve ilgileri kanunla düzenlenir. Bu idarelere, görevleri ile orantılı gelir kaynakları sağlanır.
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm mb-2">Mahalli idareler (yerel yönetimler), merkezi idareden farklı olarak, belirli bir coğrafi alandaki (il, belediye, köy) halkın yerel ve ortak ihtiyaçlarını karşılamak için kurulmuş, ayrı bir kamu tüzelkişiliğine sahip yapılardır.</p>
+            <ul class="list-disc pl-5 text-sm space-y-1">
+                 <li><strong>En Belirgin Özelliği:</strong> Karar organları (Belediye Meclisi, İl Genel Meclisi gibi) atama ile değil, halk tarafından <strong>seçimle</strong> iş başına gelir.</li>
+                 <li><strong>Seçimler:</strong> Tıpkı genel seçimler gibi, <strong>beş (5) yılda bir</strong> yapılır.</li>
+                 <li><strong>İdari Vesayet:</strong> Merkezi idare, mahalli idarelerin "patronu" değildir. Ancak, ülkenin bütünlüğünü ve hizmetlerde birliği sağlamak amacıyla yerel yönetimler üzerinde bir denetim yetkisine sahiptir. Bu yetkiye idari vesayet denir.</li>
+            </ul>
+        </div>
+        <div class="strategy-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Hiyerarşi ile İdari Vesayet Farkı (Kesin Soru!)</h6>
+            <p style="text-align: justify;" class="text-sm mb-3">Bu iki kavram, İdare Hukukunun en temel ayrımıdır ve sürekli sorulur.</p>
+            <div class="overflow-x-auto">
+                <table class="w-full text-sm border-collapse">
+                    <thead>
+                        <tr class="bg-slate-100">
+                            <th class="border border-slate-300 p-2 text-left">Kriter</th>
+                            <th class="border border-slate-300 p-2 text-left">HİYERARŞİ</th>
+                            <th class="border border-slate-300 p-2 text-left">İDARİ VESAYET</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="border border-slate-300 p-2 font-medium">Kimler Arasında?</td>
+                            <td class="border border-slate-300 p-2">Tek bir tüzel kişilik içinde, <strong>ast ile üst arasında</strong> olur. (Örn: Bakan ↔️ Vali ↔️ Kaymakam)</td>
+                            <td class="border border-slate-300 p-2"><strong>İki ayrı kamu tüzel kişiliği arasında</strong> olur. (Örn: Merkezi İdare ↔️ Belediye)</td>
+                        </tr>
+                        <tr class="bg-slate-50">
+                            <td class="border border-slate-300 p-2 font-medium">Yetkinin Kapsamı</td>
+                            <td class="border border-slate-300 p-2">Üst, astın hem <strong>hukuka uygunluk</strong> hem de <strong>yerindelik</strong> denetimini yapabilir. <strong>Emir ve talimat verebilir.</strong></td>
+                            <td class="border border-slate-300 p-2">Merkez, yerel yönetimin sadece <strong>hukuka uygunluk</strong> denetimini yapabilir. Yerindelik denetimi yapamaz, emir veremez.</td>
+                        </tr>
+                         <tr>
+                            <td class="border border-slate-300 p-2 font-medium">Analojisi</td>
+                            <td class="border border-slate-300 p-2">Şirket Müdürü ↔️ Departman Şefi</td>
+                            <td class="border border-slate-300 p-2">Devlet ↔️ Şirket (Devlet, şirketin kanunlara uyup uymadığını denetler, ama şirketin kararlarına karışamaz)</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="warning-box mt-4">
+             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Diğer Kritik Kurallar:</h6>
+             <ul class="list-disc pl-5 text-sm space-y-1">
+                <li><strong>Geçici Görevden Uzaklaştırma:</strong> Göreviyle ilgili bir suçtan dolayı hakkında soruşturma veya kovuşturma açılan bir belediye başkanını veya meclis üyesini, dava sonuçlanana kadar geçici bir tedbir olarak görevden uzaklaştırma yetkisi <strong>İçişleri Bakanına</strong> aittir.</li>
+                <li><strong>Birlik Kurma:</strong> Mahalli idarelerin kendi aralarında birlik kurmaları (örn: Belediyeler Birliği) <strong>Cumhurbaşkanının iznine</strong> tabidir.</li>
+            </ul>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 128 -->
+<details id="madde-128" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 128 – Kamu Hizmeti Görevlileriyle İlgili Hükümler
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Devletin, kamu iktisadi teşebbüsleri ve diğer kamu tüzelkişilerinin genel idare esaslarına göre yürütmekle yükümlü oldukları kamu hizmetlerinin gerektirdiği <strong>asli ve sürekli görevler, memurlar ve diğer kamu görevlileri eliyle görülür.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Memurların ve diğer kamu görevlilerinin nitelikleri, atanmaları, görev ve yetkileri, hakları ve yükümlülükleri, aylık ve ödenekleri ve diğer <strong>özlük işleri kanunla düzenlenir.</strong> Ancak, malî ve sosyal haklara ilişkin <strong>toplu sözleşme hükümleri saklıdır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Üst kademe yöneticilerinin yetiştirilme usul ve esasları, kanunla özel olarak düzenlenir.
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm mb-2">Bu madde, kamu hizmetini yürüten personelin, yani memurların ve diğer kamu görevlilerinin anayasal statüsünü belirler.</p>
+            <ul class="list-disc pl-5 text-sm space-y-2">
+                <li><strong>Asli ve Sürekli Görevler:</strong> Devletin temel, vazgeçilmez ve sürekli olan görevleri (güvenlik, sağlık, eğitim, yargı gibi) memurlar ve diğer kamu görevlileri eliyle yürütülür. Bu işler, özel sektör çalışanlarına gördürülemez.</li>
+                <li><strong>Kanun Güvencesi:</strong> Memurların nitelikleri, atanmaları, görevleri, hak ve yükümlülükleri, maaşları gibi tüm özlük işleri <strong>KANUNLA</strong> düzenlenir. Bu, memurlara keyfi idari işlemlere karşı çok önemli bir güvence sağlar. Yürütme, kanuna dayanmadan memurun statüsünü temelden değiştiremez.</li>
+                <li><strong>Toplu Sözleşme Hakkı:</strong> Memurların mali ve sosyal haklarına ilişkin imzaladıkları toplu sözleşme hükümleri, bu kanun güvencesinin bir istisnasıdır ve saklıdır.</li>
+            </ul>
+        </div>
+    </div>
+</details>
+                
 
 
   
