--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4962,7 +4962,120 @@
         </div>
     </div>
 </details>
-                
+<!-- Madde 129 -->
+<details id="madde-129" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 129 – Memurlar ve Diğer Kamu Görevlileri (Güvenceler)
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Memurlar ve diğer kamu görevlileri Anayasa ve kanunlara sadık kalarak faaliyette bulunmakla yükümlüdürler.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Memurlar ve diğer kamu görevlileri ile kamu kurumu niteliğindeki meslek kuruluşları ve bunların üst kuruluşları mensuplarına <strong>savunma hakkı tanınmadıkça disiplin cezası verilemez.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Disiplin kararları <strong>yargı denetimi dışında bırakılamaz.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Silahlı Kuvvetler mensupları ile hâkimler ve savcılar hakkındaki hükümler saklıdır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Memurların ve diğer kamu görevlilerinin yetkilerini kullanırken işledikleri kusurlardan doğan tazminat davaları, kendilerine rücu edilmek kaydıyla ve kanunun gösterdiği şekil ve şartlara uygun olarak, <strong>ancak idare aleyhine açılabilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Memurlar ve diğer kamu görevlileri hakkında işledikleri iddia edilen suçlardan ötürü ceza kovuşturması açılması, kanunla belirlenen istisnalar dışında, kanunun gösterdiği <strong>idari merciin iznine bağlıdır.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm">Bir önceki maddede memurların statüsünün kanunla düzenleneceğini görmüştük. Bu madde ise, o statü içinde görev yapan memurların ve diğer kamu görevlilerinin sahip olduğu temel güvenceleri ve sorumlulukları belirler.</p>
+        </div>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: Memurun 4 Temel Güvencesi</h6>
+            <ol class="list-decimal pl-5 text-sm space-y-2">
+                <li><strong>Savunma Hakkı Olmadan Ceza Olmaz:</strong> Memura veya meslek kuruluşu üyesine savunma hakkı tanınmadan disiplin cezası verilemez. Bu, adil yargılanma hakkının idare hukukundaki en temel yansımasıdır.</li>
+                <li><strong>Disiplin Cezalarına Karşı Yargı Yolu Açıktır:</strong> Verilen "uyarma", "kınama" dahil olmak üzere, idarenin verdiği tüm disiplin kararları yargı denetimi dışında bırakılamaz. Memur, aldığı her türlü disiplin cezasını mahkemeye taşıyabilir.</li>
+                <li><strong>Tazminat Davasında Muhatap İdaredir:</strong> Memurun görevi sırasında bir vatandaşa verdiği zarardan dolayı açılacak tazminat davaları, doğrudan memurun kendisine değil, <strong>ancak idare aleyhine açılabilir.</strong> Devlet, zararı vatandaşa ödedikten sonra, kusurlu memura bu parayı rücu eder (geri ister). Bu, memuru görevini yaparken keyfi davalardan koruyan bir güvencedir.</li>
+                <li><strong>Ceza Davası İçin İzin Gerekir:</strong> Memurun göreviyle ilgili işlediği iddia edilen bir suçtan dolayı hakkında ceza davası açılabilmesi, kural olarak idari bir merciin (Amir, Vali vb.) iznine bağlıdır.</li>
+            </ol>
+            <p class="text-sm mt-2"><strong>İstisnalar:</strong> Silahlı Kuvvetler mensupları ile hâkimler ve savcıların disiplin ve ceza usulleri kendi özel kanunlarına tabidir.</p>
+        </div>
+        <div class="strategy-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: İki Dava Türünü Ayırt Etme</h6>
+            <p style="text-align: justify;" class="text-sm">Sınavda, memura karşı açılacak dava türleri ve usulleri sıkça karıştırılır. Bu ayrımı netleştirin:</p>
+            <ul class="list-none space-y-2 mt-2">
+                <li class="flex items-start"><span class="mr-3 mt-1 text-red-700">⚖️</span><div><strong>Vatandaş, memurun kusurundan zarar görürse ➡️ Tazminat Davası ➡️ İdare'ye açar.</strong></div></li>
+                <li class="flex items-start"><span class="mr-3 mt-1 text-blue-700">⚖️</span><div><strong>Savcılık, memurun suç işlediğini düşünürse ➡️ Ceza Davası ➡️ Önce İdare'den izin alır.</strong></div></li>
+            </ul>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 130 -->
+<details id="madde-130" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 130 – Yükseköğretim Kurumları (Üniversiteler)
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Çağdaş eğitim-öğretim esaslarına dayanan bir düzen içinde milletin ve ülkenin ihtiyaçlarına uygun insan gücü yetiştirmek amacı ile; ortaöğretime dayalı çeşitli düzeylerde eğitim-öğretim, bilimsel araştırma, yayın ve danışmanlık yapmak, ülkeye ve insanlığa hizmet etmek üzere çeşitli birimlerden oluşan <strong>kamu tüzelkişiliğine</strong> ve <strong>bilimsel özerkliğe sahip</strong> üniversiteler Devlet tarafından <strong>kanunla kurulur.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kanunda gösterilen usul ve esaslara göre, <strong>kazanç amacına yönelik olmamak şartı ile vakıflar tarafından, Devletin gözetim ve denetimine tabi yükseköğretim kurumları kurulabilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kanun, üniversitelerin ülke sathına dengeli bir biçimde yayılmasını gözetir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Üniversiteler ile öğretim üyeleri ve yardımcıları serbestçe her türlü bilimsel araştırma ve yayında bulunabilirler. Ancak, bu yetki, Devletin varlığı ve bağımsızlığı ve milletin ve ülkenin bütünlüğü ve bölünmezliği aleyhinde faaliyette bulunma serbestliği vermez.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Üniversiteler ve bunlara bağlı birimler, Devletin gözetimi ve denetimi altında olup, <strong>güvenlik hizmetleri Devletçe sağlanır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kanunun belirlediği usul ve esaslara göre; <strong>rektörler Cumhurbaşkanınca, dekanlar ise Yükseköğretim Kurulunca seçilir ve atanır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Üniversite yönetim ve denetim organları ile öğretim elemanları; Yükseköğretim Kurulunun veya üniversitelerin yetkili organlarının dışında kalan makamlarca her ne suretle olursa olsun görevlerinden uzaklaştırılamazlar.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Üniversitelerin hazırladığı bütçeler; Yükseköğretim Kurulunca tetkik ve onaylandıktan sonra Milli Eğitim Bakanlığına sunulur ve merkezi yönetim bütçesinin bağlı olduğu esaslara uygun olarak işleme tabi tutularak yürürlüğe konulur ve denetlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Yükseköğretim kurumlarının kuruluş ve organları ile işleyişleri ve bunların seçimleri, görev, yetki ve sorumlulukları üniversiteler üzerinde Devletin gözetim ve denetim hakkını kullanma usulleri, öğretim elemanlarının görevleri, unvanları, atama, yükselme ve emeklilikleri, öğretim elemanı yetiştirme, üniversitelerin ve öğretim elemanlarının kamu kuruluşları ve diğer kurumlar ile ilişkileri, öğretim düzeyleri ve süreleri, yükseköğretime giriş, devam ve alınacak harçlar, Devletin yapacağı yardımlar ile ilgili ilkeler, disiplin ve ceza işleri, mali işler, özlük hakları, öğretim elemanlarının uyacakları koşullar, üniversitelerarası ihtiyaçlara göre öğretim elemanlarının görevlendirilmesi, öğrenimin ve öğretimin hürriyet ve teminat içinde ve çağdaş bilim ve teknoloji gereklerine göre yürütülmesi, Yükseköğretim Kuruluna ve üniversitelere Devletin sağladığı mali kaynakların kullanılması yolları <strong>kanunla düzenlenir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Vakıflar tarafından kurulan yükseköğretim kurumları, <strong>mali ve idari konuları dışındaki</strong> akademik çalışmaları, öğretim elemanlarının sağlanması ve güvenlik yönlerinden, Devlet eliyle kurulan yükseköğretim kurumları için Anayasada belirtilen hükümlere tabidir.
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm mb-2">Bu madde, üniversitelerin anayasal kimliğini, kuruluşunu ve işleyişini düzenler.</p>
+            <ul class="list-disc pl-5 text-sm space-y-2">
+                <li><strong>Üniversitenin Kimliği:</strong> Üniversiteler iki temel özelliğe sahiptir: <strong>Kamu Tüzelkişiliği</strong> ve <strong>Bilimsel Özerklik</strong>. Bilimsel özerklik, üniversitelerin ve akademisyenlerin her türlü bilimsel araştırma ve yayını serbestçe yapabilmesi anlamına gelir.</li>
+                <li><strong>Kuruluş Şekilleri:</strong><br>
+                    <strong>Devlet Üniversiteleri:</strong> Devlet tarafından, <strong>KANUNLA</strong> kurulur.<br>
+                    <strong>Vakıf Üniversiteleri:</strong> Vakıflar tarafından, <strong>kazanç amacına yönelik olmamak</strong> şartıyla ve Devletin gözetim ve denetimine tabi olarak kurulabilirler.
+                </li>
+                <li><strong>Güvenlik:</strong> Üniversite kampüslerinin güvenliği, özel güvenlik tarafından değil, doğrudan <strong>Devletçe sağlanır.</strong></li>
+            </ul>
+        </div>
+        <div class="strategy-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Rektörü Kim Atar, Dekanı Kim Atar?</h6>
+            <p style="text-align: justify;" class="text-sm mb-3">Üniversite yönetimindeki atama usulleri, Anayasa'da net bir şekilde ayrılmıştır ve sınavların favori konusudur:</p>
+            <ul class="list-none space-y-2 text-sm">
+                <li class="flex items-start"><span class="mr-3 mt-1">👑</span><div><strong>REKTÖRLER ➡️ CUMHURBAŞKANINCA</strong> seçilir ve atanır.</div></li>
+                <li class="flex items-start"><span class="mr-3 mt-1">🏛️</span><div><strong>DEKANLAR ➡️ YÜKSEKÖĞRETİM KURULUNCA (YÖK)</strong> seçilir ve atanır.</div></li>
+            </ul>
+        </div>
+        <div class="warning-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Diğer Kritik Bilgiler:</h6>
+            <ul class="list-disc pl-5 text-sm space-y-2">
+                 <li><strong>Akademik Güvence:</strong> Üniversite öğretim elemanları, YÖK veya kendi üniversitelerinin yetkili organları dışında kalan makamlarca (örneğin bir bakanlık veya valilik tarafından) görevlerinden uzaklaştırılamazlar.</li>
+                 <li><strong>Vakıf Üniversitelerinin Durumu:</strong> Vakıf üniversiteleri, mali ve idari konular <strong>DIŞINDAKİ</strong> akademik çalışmalar, öğretim elemanlarının sağlanması ve güvenlik gibi konularda, aynen devlet üniversiteleri gibi Anayasa hükümlerine tabidir.</li>
+            </ul>
+        </div>
+    </div>
+</details>                
 
 
   
