--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -5343,7 +5343,157 @@
         </div>
     </div>
 </details>
+<!-- Bölüm Özeti -->
+<div class="mt-16 p-6 bg-green-100 rounded-lg border-l-4 border-green-600 highlight-box" role="mark">
+    <h4 class="font-bold text-green-800 text-xl mb-3 flex items-center">
+        <span class="mr-3 text-2xl">✅</span> Yürütme - Bölüm Özeti
+    </h4>
+    <p class="text-green-900 mb-4" style="text-align: justify;">
+        Bu bölümde, 2017 Anayasa değişikliği ile kurulan ve yürütme yetkisini <strong>tek başına Cumhurbaşkanına veren</strong> yeni hükümet modelini inceledik.
+    </p>
+    <ul class="list-none space-y-3">
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">👤</span>
+            <div>
+                <strong>Cumhurbaşkanı'nın Seçimi ve Statüsü:</strong> Yürütmenin tek başıdır. <strong>40 yaşını</strong> doldurmuş, yükseköğrenim yapmış ve milletvekili seçilme yeterliğine sahip olanlar arasından halk tarafından <strong>5 yıllığına</strong> seçilir. Bir kişi <strong>en fazla 2 defa</strong> seçilebilir. Adaylığı parti grupları, son seçimde <strong>%5 oy alan partiler</strong> veya <strong>100.000 seçmen</strong> gösterebilir. Seçimi iki turludur. Makamın boşalması halinde <strong>45 gün içinde</strong> seçim yapılır.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">⚙️</span>
+            <div>
+                <strong>Cumhurbaşkanı'nın Temel Yetkileri:</strong><br>
+                • <strong>Yürütme Alanında:</strong> CB yardımcıları ve bakanları atar, üst kademe yöneticileri atar, <strong>Cumhurbaşkanlığı Kararnamesi (CBK)</strong> ve yönetmelik çıkarır.<br>
+                • <strong>Yasama Alanında:</strong> Kanunları <strong>15 gün içinde</strong> yayımlar veya veto eder (<strong>Bütçe Kanunu hariç</strong>).<br>
+                • <strong>Devlet Başkanlığı Alanında:</strong> Devleti ve milletin birliğini temsil eder, TSK'nın Başkomutanlığını temsil eder, milli güvenlik politikalarını belirler.<br>
+                • <strong>Yargı Alanında:</strong> Belirli sebeplerle (hastalık, yaşlılık vb.) <strong>özel af</strong> yetkisini kullanır, yüksek yargıya üye atar.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">📜</span>
+            <div>
+                <strong>Cumhurbaşkanlığı Kararnamesi (CBK):</strong> Yeni sistemin en önemli düzenleyici işlemidir. Temel haklar, kişi hakları ve siyasi haklar gibi <strong>"yasak alanlara" giremez</strong> ve kanunla çatışırsa kanun uygulanır. <strong>OHAL CBK'ları</strong> ise bu sınırlamalara tabi değildir.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">⚖️</span>
+            <div>
+                <strong>Cezai Sorumluluk (CB, CB Yrd. ve Bakanlar):</strong> Görevle ilgili suç iddiaları için Meclis Soruşturması yolu işletilir. Bu süreç <strong>301 (istem) ➡️ 360 (soruşturma açma) ➡️ 400 (Yüce Divan'a sevk)</strong> şeklinde, çok yüksek çoğunluklar gerektiren bir formüle tabidir. Yargılamayı Yüce Divan sıfatıyla Anayasa Mahkemesi yapar.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">🏛️</span>
+            <div>
+                <strong>İdare Teşkilatı:</strong><br>
+                • <strong>Merkezi İdare:</strong> İllerin idaresi <strong>yetki genişliği</strong> (sadece valiye ait bir istisna) esasına dayanır.<br>
+                • <strong>Mahalli İdareler:</strong> Karar organları seçimle gelir ve merkez tarafından <strong>idari vesayet</strong> denetimine tabidir.<br>
+                • <strong>Kamu Görevlileri:</strong> Statüleri kanunla güvence altına alınmıştır. Kanunsuz emrin yerine getirilmemesi esastır, ancak konusu suç teşkil etmeyen emirde amirin <strong>yazılı ısrarı</strong> memuru sorumluluktan kurtarır.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">📋</span>
+            <div>
+                <strong>Önemli Kurullar:</strong><br>
+                • <strong>DDK:</strong> Cumhurbaşkanına bağlıdır, <strong>yargıyı denetleyemez.</strong><br>
+                • <strong>MGK:</strong> Cumhurbaşkanı başkanlığında toplanan, kararları <strong>tavsiye niteliğinde</strong> olan bir danışma kuruludur.<br>
+                • <strong>YÖK:</strong> Üniversiteler üstü planlama ve denetleme organıdır, üyelerini <strong>Cumhurbaşkanı atar.</strong><br>
+                • <strong>RTÜK:</strong> <strong>9 üyesini TBMM seçer.</strong>
+            </div>
+        </li>
+    </ul>
+</div>
 
+<!-- Hafıza Teknikleri ve Kritik Sayılar Özeti -->
+<div class="mt-12 p-6 bg-blue-50 rounded-lg border-l-4 border-blue-500">
+    <h4 class="font-bold text-blue-800 text-xl mb-3 flex items-center">
+        <span class="mr-3 text-2xl">🧠</span> Bu Bölümün Sınav Şifreleri
+    </h4>
+    <div class="grid md:grid-cols-2 gap-x-8 gap-y-4">
+        <div>
+            <h5 class="font-semibold text-blue-900 mb-2">Sayısal Şifreler:</h5>
+            <ul class="list-disc pl-5 space-y-1 text-sm text-blue-900">
+                <li><strong>2:</strong> Cumhurbaşkanının maksimum görev yapma sayısı.</li>
+                <li><strong>5 Yıl:</strong> Cumhurbaşkanının görev süresi.</li>
+                <li><strong>%5:</strong> Partilerin CB adayı göstermesi için gereken oy oranı.</li>
+                <li><strong>100.000:</strong> Seçmenlerin CB adayı göstermesi için gereken imza sayısı.</li>
+                <li><strong>40 Yaş:</strong> Cumhurbaşkanı seçilme yaşı.</li>
+                <li><strong>45 Gün:</strong> Cumhurbaşkanlığı makamı boşalırsa seçimlerin yapılma süresi.</li>
+                <li><strong>9 Üye:</strong> RTÜK üye sayısı.</li>
+                <li><strong>301 ➡️ 360 ➡️ 400:</strong> Yüce Divan'a sevk edilme formülü.</li>
+            </ul>
+        </div>
+        <div>
+            <h5 class="font-semibold text-blue-900 mb-2">Kritik Kavramlar:</h5>
+            <ul class="list-disc pl-5 space-y-1 text-sm text-blue-900">
+                <li><strong>Normal CBK</strong> vs. <strong>OHAL CBK'sı:</strong> Konu sınırlaması ve yargı denetimi farkı.</li>
+                <li><strong>Yetki Genişliği</strong> (Valiye özel) vs. <strong>İdari Vesayet</strong> (Merkez-Yerel denetimi).</li>
+                <li><strong>CB Özel Affı</strong> (Kişisel) vs. <strong>TBMM Genel Affı</strong> (Genel).</li>
+                <li><strong>Bakanların Görev Suçu</strong> (Meclis Soruşturması) vs. <strong>Kişisel Suçu</strong> (Yasama Dokunulmazlığı).</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!-- Bölüm Sonu Testi -->
+<div class="mt-12 p-6 bg-sky-50 border-t-4 border-sky-500 rounded-lg strategy-box" role="region">
+    <h4 class="font-bold text-sky-900 text-xl mb-4 flex items-center">
+        <span class="mr-3 text-2xl">🧪</span> Yürütme - Tekrar Testi
+    </h4>
+    <div class="space-y-6">
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">1.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Çoktan Seçmeli</div></div>
+            <p class="text-slate-700 mb-3 text-lg">1982 Anayasası'na göre, aşağıdakilerden hangisi Cumhurbaşkanlığına aday <strong>gösteremez?</strong></p>
+            <div class="text-slate-600 space-y-2">
+                <div class="flex items-center"><span class="mr-3 font-bold">a)</span> TBMM'de grubu bulunan bir siyasi parti</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">b)</span> Son genel seçimde %3 oy almış bir siyasi parti</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">c)</span> 120.000 seçmenin imzası</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">d)</span> Son genel seçimde %2 ve %3 oy almış iki siyasi partinin birlikte</div>
+            </div>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">2.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Boşluk Doldurma</div></div>
+            <p class="text-slate-700 text-lg">Kamu kurumu niteliğindeki meslek kuruluşlarının, milli güvenlik gibi gecikmesinde sakınca bulunan hallerde faaliyetten men edilmesi kararı, idari merci tarafından verildikten sonra ......... saat içinde görevli hâkimin onayına sunulur.</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">3.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Doğru / Yanlış</div></div>
+            <p class="text-slate-700 text-lg">Cumhurbaşkanı, temel haklar ve hürriyetler alanında, kanunda boşluk bulunması halinde Cumhurbaşkanlığı Kararnamesi çıkarabilir. (<strong>D / Y</strong>)</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">4.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Kavram Analizi</div></div>
+            <p class="text-slate-700 text-lg">Bir valinin, Ankara'ya danışmadan, ildeki acil bir durumu çözmek için merkeze ait bir yetkiyi kullanması hangi anayasal ilkeye dayanır? Bir belediye başkanının aldığı kararın İçişleri Bakanlığı tarafından hukuka uygunluk açısından denetlenmesi hangi anayasal ilkeye dayanır?</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">5.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Liste</div></div>
+            <p class="text-slate-700 text-lg">Anayasa'ya göre Milli Güvenlik Kurulu'nun (MGK) "askeri kanat" üyeleri kimlerdir? (4 adet)</p>
+        </div>
+    </div>
+    <details class="mt-6">
+        <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevap Anahtarını Göster</summary>
+        <div class="mt-3 p-6 bg-slate-50 rounded-lg border border-slate-200">
+            <div class="divide-y divide-slate-200">
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">1</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>b) Son genel seçimde %3 oy almış bir siyasi parti</strong>.<br><strong>Açıklama:</strong> Partilerin tek başına veya birlikte aday gösterebilmesi için gereken asgari oy oranı %5'tir.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">2</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>24 (yirmidört)</strong>.<br><strong>Açıklama:</strong> Anayasa'daki klasik 24/48 kuralı burada da geçerlidir. Karar 24 saatte onaya sunulur, hâkim 48 saatte kararını verir.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">3</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>Yanlış</strong>.<br><strong>Açıklama:</strong> Anayasa Madde 104'e göre, Anayasa'nın ikinci kısmının birinci ve ikinci bölümlerinde yer alan temel haklar ve kişi hakları ile dördüncü bölümdeki siyasi haklar, Cumhurbaşkanlığı Kararnamesi ile düzenlenemez. Bu alan, CBK'lar için "yasak alandır".</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">4</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong><br>• Valinin yetkiyi kullanması: <strong>Yetki Genişliği</strong> (Md. 126).<br>• Bakanlığın denetlemesi: <strong>İdari Vesayet</strong> (Md. 127).</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">5</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong><br>1. Genelkurmay Başkanı<br>2. Kara Kuvvetleri Komutanı<br>3. Deniz Kuvvetleri Komutanı<br>4. Hava Kuvvetleri Komutanı</p></div>
+                </div>
+            </div>
+        </div>
+    </details>
+</div>
   
 </section>
  
